syntax = "proto3";
package customer;

option java_package = "com.secommerce.customer.grpc";
option java_outer_classname = "CustomerGrpc";

// service
service SeGrpcService {
    
    rpc GetAllCustomers (GetAllCustomersReq) returns (Customers) {}
}



// model
enum Gender {
  MALE = 0;
  FEMALE = 1;
}

message Customers {
  repeated Customer customers = 1;
}

message Customer {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string phone = 4;
    Gender gender = 5;
}


// request
message GetAllCustomersReq {

}